content/consul/v1.12.x/content/docs/enterprise/index.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Consul and the Consul logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/consul/blob/-/LICENSE

layout: docs
page_title: Consul Enterprise
description: >-
  Consul Enterprise is a paid offering that extends Consul’s open source functions to support large and complex deployments. Learn about scaling infrastructure, simplifying operations, and making networks more resilient with Enterprise.
---

# Consul Enterprise

[Consul Enterprise](https://www.hashicorp.com/products/consul/)
features address the organizational complexities of collaboration, operations, scale, and governance.
If you have purchased or wish to try out Consul Enterprise,
refer to [how to access Consul Enterprise](#access-consul-enterprise).

## Enterprise Features

The following features are [available in several forms of Consul Enterprise](#consul-enterprise-feature-availability).

### Multi-Tenancy
- [Admin Partitions](/docs/enterprise/admin-partitions): Define administrative boundaries between tenants within a single Consul datacenter
- [Namespaces](/docs/enterprise/namespaces): Define resource boundaries within a single admin partition for further organizational flexibility

### Resiliency
- [Automated Backups](/docs/enterprise/backups): Configure the automatic backup of Consul state
- [Redundancy Zones](/docs/enterprise/redundancy): Deploy backup voting Consul servers to efficiently improve Consul fault tolerance

### Scalability
- [Read Replicas](/docs/enterprise/read-scale): Deploy non-voting Consul servers to enhance the scalability of read requests

### Operational Simplification
- [Automated Upgrades](/docs/enterprise/upgrades): Ease upgrades by automating the transition from existing to newly deployed Consul servers
- [Consul-Terraform-Sync Enterprise](/docs/nia/enterprise): Leverage the enhanced network infrastructure automation capabilities of the enterprise version of Consul-Terraform-Sync

### Complex Network Topology Support
- [Network Areas](/docs/enterprise/federation): Support complex network topologies between federated Consul datacenters with pairwise federation rather than full mesh federation
- [Network Segments](/docs/enterprise/network-segments): Support complex network topologies within a Consul datacenter by enforcing boundaries in Consul client gossip traffic

### Governance
- [OIDC Auth Method](/docs/security/acl/auth-methods/oidc): Manage user access to Consul through an OIDC identity provider instead of Consul ACL tokens directly
- [Audit Logging](/docs/enterprise/audit-logging): Understand Consul access and usage patterns by reviewing access to the Consul HTTP API
- [Sentinel for KV](/docs/enterprise/sentinel): Policy-as-code framework for defining advanced key-value storage access control policies

## Access Consul Enterprise

The method of accessing Consul Enterprise and its features depends on the whether using
HashiCorp Cloud Platform or self-managed Consul.

### HCP Consul

No action is required to access Consul Enterprise in a
[HashiCorp Cloud Platform](https://cloud.hashicorp.com/products/consul) installation.

You can try out HCP Consul for free. Refer to the
[HCP Consul product page](https://cloud.hashicorp.com/products/consul) for more details.

### Self-Managed Consul

To access Consul Enterprise in a self-managed installation,
[apply a purchased license](/docs/enterprise/license/overview)
to the Consul Enterprise binary that grants access to the desired features.

You can also try out Consul Enterprise before purchasing by
[requesting a 30-day trial license](https://consul.io/trial).

## Consul Enterprise Feature Availability

Consul Enterprise is offered in several forms that provide a different mix of enterprise features.
Choose the form that best suits the needs of your organization.

Available enterprise features per Consul form and license include:

| Feature                                                  | [HashiCorp Cloud Platform (HCP) Consul] | [Consul Enterprise] | Legacy Consul Enterprise (module-based)           |
| -------------------------------------------------------- | --------------------------------------- | ------------------- | ------------------------------------------------- |
| Consul servers as a managed service                      | Yes                                     | No (self-managed)   | No (self-managed)                                 |
| [Admin Partitions](/docs/enterprise/admin-partitions)    | All tiers                               | Yes                 | With Governance and Policy module                 |
| [Namespaces](/docs/enterprise/namespaces)                | All tiers                               | Yes                 | With Governance and Policy module                 |
| [Automated Backups](/docs/enterprise/backups)            | All tiers                               | Yes                 | Yes                                               |
| [Redundancy Zones](/docs/enterprise/redundancy)          | Not applicable                          | Yes                 | With Global Visibility, Routing, and Scale module |
| [Read Replicas](/docs/enterprise/read-scale)             | No                                      | Yes                 | With Global Visibility, Routing, and Scale module |
| [Automated Upgrades](/docs/enterprise/upgrades)          | All tiers                               | Yes                 | Yes                                               |
| [Consul-Terraform-Sync Enterprise](/docs/nia/enterprise) | All tiers                               | Yes                 | Yes                                               |
| [Network Areas](/docs/enterprise/federation)             | No                                      | Yes                 | With Global Visibility, Routing, and Scale module |
| [Network Segments](/docs/enterprise/network-segments)    | No                                      | Yes                 | With Global Visibility, Routing, and Scale module |
| [OIDC Auth Method](/docs/security/acl/auth-methods/oidc)          | No                                      | Yes                 | Yes                                               |
| [Audit Logging](/docs/enterprise/audit-logging)          | Standard tier and above                 | Yes                 | With Governance and Policy module                 |
| [Sentinel for KV](/docs/enterprise/sentinel)             | All tiers                               | Yes                 | With Governance and Policy module                 |

[HashiCorp Cloud Platform (HCP) Consul]: https://cloud.hashicorp.com/products/consul
[Consul Enterprise]: https://www.hashicorp.com/products/consul/
